clusters/hetzner/apps/bluesky/bsxy/app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: bsxy
  name: bsxy
  namespace: bluesky
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: bsxy
  type: ClusterIP
